user email in profile dropdown, fix the jumping sponsors issue

--- a/wp-content/themes/makerfaire/less/nav-level-1.less
+++ b/wp-content/themes/makerfaire/less/nav-level-1.less
@@ -202,6 +202,16 @@ header.universal-nav {
           opacity: .6;
         }
       }
+	   .profile-email {
+			 font-family: 'Roboto';
+			 text-transform: uppercase;
+			 white-space: nowrap;
+			 overflow: hidden;
+			 text-overflow: ellipsis;
+			 max-width: 220px;
+			 font-size: 12px;
+          font-weight: 600;
+		}
       .dropdown-menu {
           z-index: 998;
           padding: 80px 25px 25px;
