--- a/wp-content/themes/makerfaire/less/sponsors.less
+++ b/wp-content/themes/makerfaire/less/sponsors.less
@@ -3,7 +3,7 @@
   h2 {
     font-weight: 300;
   }
-  .spnosors-row {
+  .sponsors-row {
     border-top: 1px solid rgba(0,173,239,0.9);
     padding-bottom: 50px;
   }
@@ -163,6 +163,7 @@
   h4.sponsor-slide-title {
     color: #999;
     font-weight: 300;
+	 min-height: 35px;
   }
   .sponsor-slide-cat {
     color: #666;
@@ -197,8 +198,20 @@
         -ms-flex-pack: end;
             justify-content: flex-end;
   }
-  .spnosors-row {
+  .sponsors-row {
     padding-bottom: 20px;
+	 @media screen and (max-width: 1200px) {
+		  height: 220px;
+	 }
+	 @media screen and (max-width: 1200px) {
+		  height: 220px;
+	 }
+	 @media screen and (max-width: 625px) {
+		  height: 310px;
+	 }
+	 @media screen and (max-width: 380px) {
+		  height: 500px;
+	 }
   }
   .faire-sponsors-box {
     display: -webkit-box;
